--- a/.github/workflows/forecast_test.yaml
+++ b/.github/workflows/forecast_test.yaml
@@ -17,8 +17,7 @@ jobs:
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: |
-          ./forecast.rb 578
+      - run: ./forecast.rb 578
         env:
           ANTHROPIC_API_KEY: $${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: $${ secrets.METACULUS_BOT_API_TOKEN }}
