--- a/.github/workflows/forecast_test.yaml
+++ b/.github/workflows/forecast_test.yaml
@@ -19,7 +19,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - run: ./forecast.rb 578
         env:
-          ANTHROPIC_API_KEY: $${{ secrets.ANTHROPIC_API_KEY }}
-          METACULUS_BOT_API_TOKEN: $${ secrets.METACULUS_BOT_API_TOKEN }}
-          METACULUS_BOT_ID: $${ secrets.METACULUS_BOT_ID }}
-          PERPLEXITY_API_KEY: $${{ secrets.PERPLEXITY_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          METACULUS_BOT_API_TOKEN: ${ secrets.METACULUS_BOT_API_TOKEN }}
+          METACULUS_BOT_ID: ${ secrets.METACULUS_BOT_ID }}
+          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
