--- a/.github/workflows/forecast_test.yaml
+++ b/.github/workflows/forecast_test.yaml
@@ -20,6 +20,6 @@ jobs:
       - run: ./forecast.rb 578
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-          METACULUS_BOT_API_TOKEN: ${ secrets.METACULUS_BOT_API_TOKEN }}
-          METACULUS_BOT_ID: ${ secrets.METACULUS_BOT_ID }}
+          METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
+          METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
