--- a/.github/workflows/forecast_test.yaml
+++ b/.github/workflows/forecast_test.yaml
@@ -2,6 +2,11 @@ name: Forecast Test
 
 on:
   workflow_dispatch:
+    inputs:
+      post_id:
+        description: 'Metaculus post id to generate forecast for.'
+        default: '578'
+        type: string
 
 # prevent parallel runs
 concurrency:
@@ -17,7 +22,7 @@ jobs:
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: ./forecast.rb 578
+      - run: ./forecast.rb ${{ inputs.post_id }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
