--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -20,6 +20,8 @@ jobs:
       - id: ids
         run: |
           "IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
+        env:
+          METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
       - run: ./research.rb ${{ steps.ids.IDS }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
