--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -19,16 +19,16 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - id: ids
         run: |
-          "IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
+          echo "POST_IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
-      - run: ./research.rb ${{ steps.ids.IDS }}
+      - run: ./research.rb ${{ steps.ids.POST_IDS }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - run: ./forecast.rb ${{ steps.ids.IDS }}
+      - run: ./forecast.rb ${{ steps.ids.POST_IDS }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
