--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -22,13 +22,15 @@ jobs:
           echo "POST_IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
-      - run: ./research.rb ${{ steps.ids.POST_IDS }}
+      - if: steps.ids.POST_IDS != ''
+        run: ./research.rb ${{ steps.ids.POST_IDS }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - run: ./forecast.rb ${{ steps.ids.POST_IDS }}
+      - if: steps.ids.POST_IDS != ''
+        run: ./forecast.rb ${{ steps.ids.POST_IDS }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
