--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -21,7 +21,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - id: ids
         run: |
-          echo "POST_IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
+          echo "POST_IDS=$(./tournament_questions.rb minibench)" >> "$GITHUB_OUTPUT"
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
       - if: steps.ids.POST_IDS != ''
