--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -21,6 +21,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - id: ids
         run: |
+          ./tournament_questions.rb minibench
           echo "POST_IDS=$(./tournament_questions.rb minibench)" >> "$GITHUB_OUTPUT"
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
