offset cron start by 5 minutes to avoid congestion

--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -3,7 +3,7 @@ name: Minibench Forecast
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 * * * *" # run every 15 minutes
+    - cron: "5/15 * * * *" # run every 15 minutes
 
 # prevent parallel runs
 concurrency:
