--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -22,7 +22,7 @@ jobs:
       - id: ids
         run: |
           ./tournament_questions.rb minibench
-          echo "POST_IDS=$(./tournament_questions.rb minibench)" >> "$GITHUB_OUTPUT"
+          echo "POST_IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
