--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -44,6 +44,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
+        with:
+          path: tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -67,6 +69,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
+        with:
+          path: tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -87,6 +91,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
+        with:
+          path: tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
