--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -44,8 +44,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
-        with:
-          path: tmp
+      - run: mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -69,8 +68,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
-        with:
-          path: tmp
+      - run: mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -91,8 +89,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
-        with:
-          path: tmp
+      - run: mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
