--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+      - uses: actions/download-artifact@v4
+      - run: mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
