ci: conditionally move artifact directory in workflows

--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -21,7 +21,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           merge-multiple: true
-      - run: mv ./artifact ./tmp
+      - run: |
+          [ -d ./artifact ] && mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -50,8 +51,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           merge-multiple: true
-      - run: |
-          [ -d artifact ] && mv ./artifact ./tmp
+      - run: mv ./artifact ./tmp
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
