ci: update GitHub Actions workflow for research job

--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v4
         with:
-          name: research
+          merge-multiple: true
           path: tmp
       - uses: ruby/setup-ruby@v1
         with:
