--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -66,6 +66,8 @@ jobs:
         with:
           name: forecast.${{ matrix.forecaster_index }}
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
+      - run: |
+          echo "$(cat tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
 
   revise_forecast:
     needs: forecast
@@ -98,6 +100,8 @@ jobs:
         with:
           name: revision.${{ matrix.forecaster_index }}
           path: tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
+      - run: |
+          echo "$(cat tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
 
   finalize:
     needs: revise_forecast
