--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -34,8 +34,8 @@ jobs:
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
-        run: |
-          echo "Post ID(s): ${{ inputs.post_id || steps.ids.post_ids }}" >> $GITHUB_STEP_SUMMARY
+      - run: |
+          echo "Metaculus Post ID(s): `${{ inputs.post_id || steps.ids.post_ids }}`" >> $GITHUB_STEP_SUMMARY
 
   # research:
   #   runs-on: ubuntu-latest
